# explicitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
src/explicitor/: __init__.py  decorators.py  utils.py
src/explicitor/types/: __init__.py  result.py
test/: test_types.py
